details of participant view improved, include checkbox for different records,

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/pfj.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Programa PFJ 2025</title>
+    <title>pfj2025</title>
   </head>
   <body>
     <div id="app"></div>
